# genai-media-verifier

./: .gitignore  README.md
backend/: .env.example  .gitignore  .railwayignore  Dockerfile  compare_models.py  config.py  main.py  nixpacks.toml  pyproject.toml  requirements.txt  setup_test_data.py  start.bat  start.sh  test_current_models.py  train_deepfake_models.py  update_to_finetuned.py
backend/models/: deepfake_detector.py  ensemble_detector.py  face_analyzer.py  frequency_analyzer.py  metadata_analyzer.py  progress_tracker.py
backend/models/video/: audio_analyzer.py  comprehensive_detector.py  frame_extractor.py  metadata_analyzer.py  physics_checker.py  physiological_analyzer.py  temporal_analyzer.py
backend/services/: comprehensive_analyzer.py  report_generator.py  video_analyzer.py
backend/temp/: FIXES_APPLIED.md  README.md  cloudflared-config.yml  nixpacks.toml  requirements-railway.txt  start-cloudflared.bat
backend/utils/: forensics_utils.py
frontend/: .gitignore  DEPLOYMENT.md  PERFORMANCE_GUIDE.md  README.md  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/learn/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: conditional-learn-nav.tsx  conditional-nav.tsx  hero-section.tsx  splash-cursor.tsx
frontend/components/ui/: 3d-adaptive-navigation-bar.tsx  animated-shader-background.tsx  feature-section-with-hover-effects.tsx  horizontal-scroll-features.tsx  snow-particles.tsx  wavy-background.tsx
frontend/components/upload/: processing-section.tsx  results-dashboard.tsx  risk-gauge.tsx  signals-overview.tsx  technical-analysis.tsx
frontend/lib/: performance.ts
