[project]
name = "veritas-backend"
version = "0.1.0"
description = "V.E.R.I.T.A.S (Verification Engine for Real-time Image and Text Authenticity Scanning) analyzes media files to detect potential deepfakes and manipulation"
requires-python = ">=3.12"
dependencies = [
  # Core API
  "fastapi==0.104.1",
  "uvicorn==0.24.0",
  "python-multipart==0.0.6",
  "starlette==0.27.0",

  # Deep Learning
  "torch==2.2.2",
  "torchvision==0.17.2",
  "transformers==4.57.3",
  "timm==1.0.22",
  "safetensors==0.7.0",
  "huggingface-hub==0.36.0",
  "tokenizers==0.22.1",

  # Image Processing
  "pillow==10.2.0",
  "opencv-python==4.8.1.78",
  "mediapipe==0.10.31",
  "piexif==1.1.3",

  # Video Analysis
  "scenedetect==0.6.7.1",
  "facenet-pytorch==2.6.0",

  # Audio Analysis
  "librosa==0.11.0",
  "soundfile==0.13.1",
  "sounddevice==0.5.3",
  "audioread==3.1.0",
  "soxr==1.0.0",

  # Scientific Computing
  "numpy==1.26.2",
  "scipy==1.11.4",
  "scikit-learn==1.8.0",
  "numba==0.63.1",
  "llvmlite==0.46.0",

  # Utilities
  "requests==2.32.5",
  "pydantic==2.12.5",
  "pydantic-core==2.41.5",
  "PyYAML==6.0.3",
  "tqdm==4.67.1",
  "joblib==1.5.3",
  "filelock==3.20.1",
  "fsspec==2025.12.0",
  "networkx==3.6.1",
  "sympy==1.14.0",
  "mpmath==1.3.0",
  "packaging==25.0",
  "platformdirs==4.5.1",
  "typing-extensions==4.15.0",
  "typing-inspection==0.4.2",
  "regex==2025.11.3",
  "certifi==2025.11.12",
  "urllib3==2.6.2",
  "charset-normalizer==3.4.4",
  "idna==3.11",

  # Core dependencies
  "Jinja2==3.1.6",
  "MarkupSafe==3.0.3",
  "click==8.2.1",
  "h11==0.16.0",
  "anyio==3.7.1",
  "sniffio==1.3.1",
  "decorator==5.2.1",
  "lazy_loader==0.4",
  "pooch==1.8.2",
  "threadpoolctl==3.6.0",
  "msgpack==1.1.2",
  "flatbuffers==25.12.19",
  "absl-py==2.3.1",
  "annotated-types==0.7.0",
  "pycparser==2.23",
  "cffi==2.0.0",
  "colorama==0.4.6",
  "setuptools==80.9.0"
]
